# agenticblocks

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  index.md
examples/: 01_getting_started.ipynb  03_automated_design_of_agentic_systems.ipynb  03_automated_design_of_agentic_systems_adas.ipynb  04_multi_agent_systems_with_zero_supervision_mas-zero.ipynb  README.md
src/agenticblocks/: __init__.py  block.py  blocks.py  tools.py  trace.py  utils.py
src/agenticblocks/models/: __init__.py  model.py  stats.py  utils.py
tests/: conftest.py  test_caching.py  test_tools.py  test_trace.py
tests/blocks/: __init__.py  test_block_base.py  test_chain_of_thought.py  test_io.py  test_multi_agent_debate.py  test_react.py  test_self_consistency.py  test_self_refine.py  test_tool_calling.py  test_tool_reasoning.py
tests/models/: test_local_model.py  test_model_function_tools.py  test_model_function_tools_providers.py  test_model_history.py  test_model_init.py  test_stats.py
