[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticblocks"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.0"]
google = ["google-genai>=0.1.0"]
xai = ["xai-sdk>=0.1.0"]
all = [
    "anthropic>=0.30.0",
    "google-genai>=0.1.0",
    "xai-sdk>=0.1.0",
]
dev = ["pytest"]
